# localllm

./: .gitignore  GPU_ARRIVAL_CHECKLIST.md  NOTES.md  PLAN.md  README.md  llama_runtime.py  pyproject.toml
benchmarks/: BENCHMARK_RESULTS.md  README.md  agentic_barrage.sh  agentic_barrage_compare.sh  agentic_barrage_score.py  coding_compare.sh  coding_compare_score.py  common.sh  config.sh  env_metadata.py  final_decision_round.sh  generate_results_md.py  gpu_safety.py  harness_catalog.py  model_eval.py  publish_summary.py  qualify_gpu_lifecycle.sh  result_summaries.py  run_barrage_v2.sh  run_model_eval.sh  run_tuning_finalist_barrage.sh  sweep_contexts.sh  sweep_pp.sh  sweep_profiles.sh
config/: localllm-main.env  localllm-reranker.env  localllm-runtime.env
scripts/: amdgpu-runtime-pm-guard.sh  amdgpu-runtime-pm-resume.sh  benchmark_qwen_runtime.py  chat-tui.sh  chat.sh  chat_tui.py  common.sh  current-main.sh  gpu-safety.sh  idle-flush-main.sh  list-presets.sh  load-glm-4.6v.sh  load-main-preset.sh  load-qwen-3.5-abl.sh  load-qwen-3.5.sh  omnivoice_client.py  omnivoice_server.py  serve-embedding.sh  serve-main.sh  serve-omnivoice.sh  serve-reranker.sh  serve-router.sh  set-runtime-backend.sh  start-stack.sh  status.sh  stop-stack.sh  unload-main.sh
site/: NOTES.md  PLAN.md  PRODUCT.md  index.html
systemd/: 99-amdgpu-runtime-pm-on.rules  amdgpu-runtime-pm-off.service  localllm-amd-power-cap.service  localllm-embedding.service  localllm-gpu-power-limit.service  localllm-main-idle-flush.service  localllm-main-idle-flush.timer  localllm-main.service  (+2 more)
(+170 files in other folders)
