[project]
name = "localllm"
version = "0.1.0"
description = "Local llama.cpp service runtime helpers for OpenAI-compatible HTTP model services"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "matplotlib>=3.11.0",
  "pillow>=12.2.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llama_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/sim_compare/fixture_repo/worker/retry.py" = ["F841"]
